# MIETIK

2rd Term/Electrical_Engeneering/: Gleb1.ms14  Gleb1.ms14 (Security copy)  Pinaev_lab_ 1.ms14  Pinaev_lab_ 1.ms14 (Security copy)
2rd Term/Pinaev_lab_ algebra/: lab_1.ipynb  lab_2.ipynb  lab_3.ipynb  lab_4.ipynb  lab_5.ipynb  lab_6.ipynb  lab_7.ipynb  lab_8.ipynb  lab_9 pin.ipynb
2rd Term/Pinaev_lab_ algebra/Лаб.работы_Романова/: Thumbs.db  lab1.Знакомство с пакетом Анаконда.docx  lab10.Квадратичная форма.docx  lab11.Системы линейных уравнений.docx  lab2.Определители.Пр.Крамера.docx  lab3.Векторная алгебра.docx  lab4.Прямая на плоскости.docx  lab5.Прямая и плоскость (2 занятия).docx  lab6.Преобразование координат.doc  lab7.Кривые 2 порядка.docx  (+3 more)
2rd Term/Pinaev_lab_NEW MATAN/: 1_lab.ipynb  2_lab.ipynb  3_lab.ipynb  4_lab.ipynb  5_lab.ipynb  7_lab.ipynb  kausghdh.ipynb
2rd Term/Pinaev_lab_c++/: BDZ.c  Lab_6.c  lab-1.c  lab-1.cpp  lab-2(1).c  lab-2.c  lab-3(1).c  lab-3(2).c  lab_2_2.c  lab_6_1.c  tempCodeRunnerFile.c
2rd Term/Pinaev_lab_informatika/: Pinaev V.docx  Referat.docx  lab_2.xlsm
2rd Term/Pinaev_lab_matanal/: 1 лаба задание С3.docx  BDZ_2.ipynb  kr.ipynb  lab_1.ipynb  lab_10_Pinaev V.ipynb  lab_11_Pinaev V.ipynb  lab_2.ipynb  lab_3.ipynb  lab_4.ipynb  lab_5.ipynb  lab_6.ipynb  lab_7.ipynb  lab_8.ipynb  lab_9_Pinaev V.ipynb  t.txt  t1.txt  Расчетное(ПИНАЕВ В).ipynb
3rd Term/Chisl_metod/: Lab_1.ipynb  shicl_m_lab_1.ipynb
3rd Term/Furie_Transform/: FurieTransform.py
3rd Term/OOP/lab_1/: CMakeLists.txt  main.cpp  main_update.cpp
(+123 files in other folders)
